--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
         "chai": "^4.3.6",
+        "ec-pem": "^0.18.0",
         "ethers": "^5.7.1",
         "hardhat": "^2.11.2",
         "hardhat-contract-sizer": "^2.4.0",
@@ -40,8 +41,8 @@
         "typescript": "^4.5.4"
     },
     "dependencies": {
-        "dotenv": "^10.0.0",
-        "@openzeppelin/contracts": "^4.2.0"
+        "@openzeppelin/contracts": "^4.2.0",
+        "dotenv": "^10.0.0"
     },
     "mocha": {
         "timeout": 10000000
