--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "typescript": "^4.5.4"
     },
     "dependencies": {
+        "@account-abstraction/contracts": "^0.5.0",
         "@openzeppelin/contracts": "^4.2.0",
         "@thehubbleproject/bls": "^0.5.1",
         "dotenv": "^10.0.0"
