--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         "@account-abstraction/contracts": "^0.6.0",
         "@openzeppelin/contracts": "^4.2.0",
         "@thehubbleproject/bls": "^0.5.1",
-        "dotenv": "^10.0.0"
+        "dotenv": "^10.0.0",
+        "solidity-dkim": "^1.0.1"
     },
     "mocha": {
         "timeout": 10000000
