--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,8 @@ jobs:
           key: yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             yarn-
+      - name: Update submodules
+        run: git submodule update --init --recursive
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
