--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
         "sourceMap": true,
         "noImplicitAny": false
     },
-    "include": ["./scripts", "./test"],
+    "include": ["./scripts", "./test", "./deploy"],
     "files": ["./hardhat.config.ts"]
 }
