update node to latest version

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "license": "MIT",
     "engines": {
-        "node": "^14.0.0 || ^16.0.0 || ^18.0.0"
+        "node": "^18.0.0 || ^20.0.0"
     },
     "scripts": {
         "clean": "rm -rf artifacts && rm -rf cache && rm -rf typechain",
